# TP2022_Shestakova_126

./: .gitmodules  README.md
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: CTest  index_test.cpp  lib_test.cpp  main.cpp  main_test.cpp
task3/: CMakeLists.txt
task4/examples/: 01-main.cpp
task4/task4/examples/: 02-main.cpp
task4/task4/tests/02-tree/: TreeTestCase.cpp
task4/task4/tests/03-weather/: WeatherTestCase.cpp
task4/task4/tests/examples/: Makefile
task4/task4/tests/lib/: libgmock.so.1.11.0  libgtest_main.so.1.11.0
task4/task4/tests/src/00-aplusb/: Makefile  cmake_install.cmake
task4/task4/tests/src/01-simple-library/: Makefile  cmake_install.cmake
task4/task4/tests/src/02-tree/: Makefile  cmake_install.cmake
task4/task4/tests/src/03-weather/: cmake_install.cmake
task4/task4/tests/tests/: Makefile  cmake_install.cmake
task4/task4/tests/tests/00-aplusb/: Makefile  cmake_install.cmake
task4/tests/: CMakeCache.txt  Makefile  cmake_install.cmake
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp
task4/tests/examples/: cmake_install.cmake
task4/tests/lib/: libgmock_main.so.1.11.0
task4/tests/src/03-weather/: Makefile
task4/tests/tests/01-simple-library/: Makefile  cmake_install.cmake
task4/tests/tests/03-weather/: Makefile
task5/cmake-with-flask/: Dockerfile
task6/: CMakeLists.txt
(+3 files in other folders)
